Changes
-------

2016-11-22

    * Updated

2016-10-13

    * Fixed bug where code qualifiers weren't included in exports.

2016-10-05

    * Fixed another bug where surveys couldn't be imported using the built-in file chooser.

2016-09-26

    * Fixed bug where surveys couldn't be imported using the built-in file chooser.

2016-09-23

    * Fixed bug where coordinates didn't get included in exports.

2016-09-15

    * Added confirmation dialog before records and entities are deleted
    * Prevented non-relevant attributes from being updated
    * Fixed bug that prevented surveys from being imported directly from Google Drive
    * Added timestamp to exported data files
    * Included option to exclude images from export
    * Included option to save exported data files in Downloads directory
    * Set title in action bar to current survey name
    * Updated "Smart next" so it jumps to the record list once at the end of a record
    * Added support for survey designs which restricts manual entry of GPS coordinates
    * Indicated if a node in the node list sidebar is an attribute or not by using bold text on non-attributes
    * Added support for Time attribute record keys
    * Removed redundant incomplete coordinate validation error
    * Made sure options for multi-choice code attributes get updated when parent code attribute is changed
    * Fixed bug that prevented images from being removed
    * Updated look and feel to Material Design

2016-07-06

    * Allowed dates to be record keys
    * Fixed bug where default attributes didn't get validated properly
    * Hid code keys when configured in survey design

2016-04-26

    * Fixed crash for designs where records used numeric keys

2016-03-30

    * Bug fixes
    * Supports surveys from Collect Desktop 3.10.x

2016-01-28

    * Supports surveys from latest version of Collect Desktop

2015-11-23

    * Prevented data exported when there are records without their key(s) specified